--- a/python/ROC AUC.ipynb
+++ b/python/ROC AUC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,25 @@
     "X_train, X_train_lr, y_train, y_train_lr = train_test_split(X_train,\n",
     "                                                            y_train,\n",
     "                                                            test_size=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(40000, 20) (20000, 20) (20000, 20)\n",
+      "(40000,) (20000,) (20000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print X_test.shape, X_train.shape, X_train_lr.shape\n",
+    "print y_test.shape, y_train.shape, y_train_lr.shape"
    ]
   },
   {
@@ -236,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
